---
title: Package application
---
classDiagram
namespace application {
  class Launcher
  class Main
  class Controller
  class Load_From_Controller
  class RtClient
  class ServerException
  class NamesSupplier
}

class Launcher {
  + main(in args: String[])$
}

class Main {
  + start(in primaryStage: Stage)
  + main(in args: String[])$
}

class Controller {
  + caseName: String $
  + menu: RtClient $
  + connection: boolean $
  + ip: String $
  - textIp: TextField
  - buttonConnection: Button
  - buttonFromDB: Button
  - fromFileButton: Button
  - buttonRetry: Button
  - linked: Label
  - ipControl: Label
  + initialize()
  + connectButton()
  + validate(in ip: String) boolean$
  + refreshConnection()$
  + enableConnect()
  + loadFromDB(in event: ActionEvent)
  + loadFromFile(in event: ActionEvent)
  + openWindow(in event: ActionEvent, in title: String)
  + retryConnection()
}

class Load_From_Controller {
  - tableName: String
  - tableNameValue: ComboBox~String~
  - branchValue: TextField
  - output: TextArea
  - executionButton: Button
  - newExecutionButton: Button
  - exitButton: Button
  - okButton: Button
  - menuButton: Button
  - tableNameLabel: Label
  + initialize()
  - loadNames(in namesSupplier: NamesSupplier, in promptText: String)
  + enableExecute()
  + execute()
  + goAction()
  + newExecution()
  + exitFrame()
  + menu(in event: ActionEvent)
}

class NamesSupplier {
  <<interface>>
  + get() List~String~
}

class RtClient {
  - out: ObjectOutputStream
  - in: ObjectInputStream
  - port: int = 8080
  - ip: String
  + RtClient(in ip: String)
  - connect()
  - resetConnection()
  + storeTableFromDb(in tableName: String)
  + learningFromDbTable() String
  + learningFromDbTable(in branch: int) String
  + learningFromFile(in tableName: String) String
  + learningFromFile(in branch: int) String
  + getTableNames() ArrayList~String~
  + getFileNames() ArrayList~String~
  - startPrediction() String
  - sendBranchAndRead(in branch: int) String
  + close()
}

class ServerException {
  + ServerException(in message: String)
}

class Application["<i>Application</i>"]{
  <<JavaFX abstract>>
  + start(in primaryStage: Stage)*
}

class Exception

Main ..> Controller : loads FXML
Main --|> Application
ServerException --|> Exception

Load_From_Controller *.. NamesSupplier : inner interface

Launcher ..> Main
Controller "1" o-- "1" RtClient
Load_From_Controller ..> Controller
Load_From_Controller ..> RtClient
RtClient ..> ServerException
